[gd_scene load_steps=6 format=3 uid="uid://b7e58t4p6qcsj"]

[ext_resource type="Script" path="res://scripts/library_game_menu.gd" id="1_dix2i"]
[ext_resource type="FontFile" uid="uid://c07wbcgwc3ugb" path="res://Fonts/fonts/architect-s-daughter/ArchitectsDaughter.ttf" id="2_3k8yb"]
[ext_resource type="Texture2D" uid="uid://c3pbrb2c55jyr" path="res://Q-Mark drawing.png" id="3_2t5h3"]
[ext_resource type="Theme" uid="uid://xmp7gvkp6mo7" path="res://text_box_theme.tres" id="4_tcayy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xdiye"]

[node name="LibraryGameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dix2i")

[node name="GameInfo" type="Polygon2D" parent="."]
visible = false
show_behind_parent = true
top_level = true
position = Vector2(80, 40)
scale = Vector2(2.83735, 7.76671)
color = Color(0.117647, 0.0862745, 0.337255, 1)
polygon = PackedVector2Array(49.3855, 16.1763, 296, 16, 296, 68, 49.3855, 68)

[node name="Background" type="Panel" parent="GameInfo"]
show_behind_parent = true
offset_left = 42.2419
offset_top = 13.9399
offset_right = 303.242
offset_bottom = 70.9399
theme = ExtResource("4_tcayy")
metadata/_edit_use_anchors_ = true

[node name="GameInfoLabel" type="RichTextLabel" parent="GameInfo"]
offset_left = 59.2102
offset_top = 19.5707
offset_right = 841.21
offset_bottom = 300.571
scale = Vector2(0.295605, 0.15)
theme_override_fonts/normal_font = ExtResource("2_3k8yb")
bbcode_enabled = true
text = "[center][b]How to Play:[/b][/center]
Tap, click, or use keyboard (w/d and arrow keys) to move the falling books - stack 10 to win!

[center][b]Things to note:[/b][/center]
Your overall score is calculated using your high score in each difficulty.
If a book falls off the table, you lose. 
If a book that's not the first book hits the table, you lose.
When you play a difficulty once, it's temporarily unavailable until you play all the other ones."

[node name="BackButton" type="Button" parent="."]
top_level = true
layout_mode = 0
offset_left = 1016.0
offset_top = 93.0
offset_right = 1102.0
offset_bottom = 146.0
theme_override_fonts/font = ExtResource("2_3k8yb")
text = "BACK
"

[node name="Polygon2D" type="Polygon2D" parent="BackButton"]
self_modulate = Color(0.117647, 0.0862745, 0.337255, 1)
show_behind_parent = true
scale = Vector2(0.210784, 0.946429)
polygon = PackedVector2Array(0, 0, 272, 0, 408, 0, 408, 56, 0, 56)

[node name="PlayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 432.0
offset_top = 536.0
offset_right = 615.0
offset_bottom = 573.0
scale = Vector2(1.5, 1.5)
theme_override_fonts/font = ExtResource("2_3k8yb")
text = "PLAY"

[node name="Polygon2D" type="Polygon2D" parent="PlayButton"]
self_modulate = Color(0.117647, 0.0862745, 0.337255, 1)
show_behind_parent = true
scale = Vector2(0.447439, 0.666162)
polygon = PackedVector2Array(0, 0, 272, 0, 408, 0, 408, 56, 0, 56)

[node name="Easy" type="Button" parent="."]
layout_mode = 0
offset_left = 432.0
offset_top = 248.0
offset_right = 615.0
offset_bottom = 285.0
scale = Vector2(1.5, 1.5)
theme_override_fonts/font = ExtResource("2_3k8yb")
text = "EASY"

[node name="Polygon2D" type="Polygon2D" parent="Easy"]
self_modulate = Color(0.117647, 0.0862745, 0.337255, 1)
show_behind_parent = true
scale = Vector2(0.447439, 0.666162)
polygon = PackedVector2Array(0, 0, 272, 0, 408, 0, 408, 56, 0, 56)

[node name="Medium" type="Button" parent="."]
layout_mode = 0
offset_left = 432.0
offset_top = 336.0
offset_right = 615.0
offset_bottom = 373.0
scale = Vector2(1.5, 1.5)
theme_override_fonts/font = ExtResource("2_3k8yb")
text = "MEDIUM"

[node name="Polygon2D" type="Polygon2D" parent="Medium"]
self_modulate = Color(0.117647, 0.0862745, 0.337255, 1)
show_behind_parent = true
scale = Vector2(0.447439, 0.666162)
polygon = PackedVector2Array(0, 0, 272, 0, 408, 0, 408, 56, 0, 56)

[node name="Hard" type="Button" parent="."]
layout_mode = 0
offset_left = 432.0
offset_top = 424.0
offset_right = 615.0
offset_bottom = 461.0
scale = Vector2(1.5, 1.5)
theme_override_fonts/font = ExtResource("2_3k8yb")
text = "HARD
"

[node name="Polygon2D" type="Polygon2D" parent="Hard"]
self_modulate = Color(0.117647, 0.0862745, 0.337255, 1)
show_behind_parent = true
scale = Vector2(0.447439, 0.666162)
polygon = PackedVector2Array(0, 0, 272, 0, 408, 0, 408, 56, 0, 56)

[node name="InfoButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0.996078)
layout_mode = 0
offset_left = 224.0
offset_top = 24.0
offset_right = 464.0
offset_bottom = 257.0
scale = Vector2(0.25, 0.25)
theme_override_styles/focus = SubResource("StyleBoxEmpty_xdiye")
icon = ExtResource("3_2t5h3")

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="Medium" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="Hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="InfoButton" to="." method="_on_info_button_pressed"]
